add and handle check_opening_hours_at_time action

--- a/credentials.yml
+++ b/credentials.yml
@@ -9,7 +9,7 @@ rest:
 telegram:
   access_token: "6721658758:AAEpeodY6cu_jSSvu5BMMl9ptTMRb6q80bQ"
   verify: "pythonRasaChatbot"
-  webhook_url:  "https://baf9-77-255-111-183.ngrok.io/webhooks/telegram/webhook"
+  webhook_url:  "https://b810-77-255-111-183.ngrok.io/webhooks/telegram/webhook"
 
 #facebook:
 #  verify: "<verify>"
