--- a/data/stories.yml
+++ b/data/stories.yml
@@ -38,3 +38,8 @@ stories:
   steps:
     - intent: check_opening_hours
     - action: action_check_opening_hours
+
+- story: user asks about opening hours at a specific time
+  steps:
+    - intent: check_opening_hours_at_time
+    - action: action_check_opening_hours_at_time
