--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -186,3 +186,66 @@ nlu:
     - I'm interested in seeing the menu items.
     - What kind of food do you offer?
     - Can you provide information about your menu's pricing?
+
+- intent: place_order
+  examples: |
+    - I want [2](quantity) [Hot-dog](dish_item).
+    - Can I order a [Pizza](dish_item)?
+    - Place an order for [3](quantity) [Burger](dish_item).
+    - I'd like to get [7](quantity) [Spaghetti Carbonara](dish_item).
+    - I need [1](quantity) [Tiramisu](dish_item)
+
+- intent: place_order_default_one_item
+  examples: |
+    - I want [Hot-dog](dish_item).
+    - Can I order a [Pizza](dish_item)?
+    - Place an order for [Burger](dish_item).
+    - I'd like to get [Spaghetti Carbonara](dish_item).
+    - I need [Tiramisu](dish_item)
+
+- regex: quantity
+  examples: |
+    - [0-9]+
+
+- synonym: "Lasagne"
+  examples: |
+    - Lasagne
+    - Lasagna
+    - Lasagnes
+    - Lasagnas
+
+- synonym: "Pizza"
+  examples: |
+    - Pizza
+    - Pizzas
+
+- synonym: "Hot-dog"
+  examples: |
+    - Hot-dog
+    - Hotdog
+    - Hot-dogs
+    - Hotdogs
+    - Sausage Sandwich
+
+- synonym: "Burger"
+  examples: |
+    - Burger
+    - Burgers
+    - Hamburger
+    - Cheeseburger
+
+- synonym: "Spaghetti Carbonara"
+  examples: |
+    - Spaghetti Carbonara
+    - Carbonara
+    - Carbonaras
+    - Spaghetti
+    - Pasta
+    - Pasta Carbonara
+
+- synonym: "Tiramisu"
+  examples: |
+    - Tiramisu
+    - Italian dessert
+    - Coffee cake
+    - Dessert
