add action to confirm order

--- a/data/nlu/place_order_nlu.yml
+++ b/data/nlu/place_order_nlu.yml
@@ -4,7 +4,9 @@ nlu:
 - intent: place_order
   examples: |
     - I want [2](quantity) [Hot-dog](dish_item).
+    - I want [7](quantity) [Lasagne](dish_item).
     - Can I order a [Pizza](dish_item)?
+    - [5](quantity) [Hotdog](dish_item), please
     - Place an order for [3](quantity) [Burger](dish_item).
     - I'd like to get [7](quantity) [Spaghetti Carbonara](dish_item).
     - I need [1](quantity) [Tiramisu](dish_item)
@@ -13,6 +15,7 @@ nlu:
   examples: |
     - I want [Hot-dog](dish_item).
     - Can I order a [Pizza](dish_item)?
+    - [Lasagne](dish_item) please.
     - Place an order for [Burger](dish_item).
     - I'd like to get [Spaghetti Carbonara](dish_item).
     - I need [Tiramisu](dish_item)
