add script to generate mistakes typos_generator.py

--- a/data/nlu/list_menu_nlu.yml
+++ b/data/nlu/list_menu_nlu.yml
@@ -16,3 +16,39 @@ nlu:
     - Can you provide information about your menu's pricing?
     - What is on menu?
     - Show me menu?
+    - Show me the ,unem please
+    - Show me teh menu, please.
+    - Show me thee me,nu please.
+    - Can uyo istl eht menu op?tions?
+    - naC oyu ltsi the menu options?
+    - Cna you list the menu options?
+    - What dishes do you serve
+    - What dishes do you serve?
+    - Whtat dishes do you serve?
+    - I'd like to know what's on the menu..
+    - I'd like to know what's on the menu.
+    - I'd keli to know what's on the .unem
+    - Whtat are the elbaliava doof choices?
+    - tahW re the available food choices?
+    - What are the available foodd choices?
+    - Show me what I can order.
+    - how me what I can order.
+    - how me whtat I can order.
+    - an you tell me tuoba your enu?
+    - Ca youu tell me tuoba your menu?
+    - anC youu llet me about your menu?
+    - I'm nterested in seeing the meunu items.
+    - I'm interested in seeingg the menu items.
+    - Im' nterested in seeing the menu tems.
+    - tahW kind of food do you ?reffo
+    - What ind of food do youu offer?
+    - What kind of food do yuo offer?
+    - Can youu provide information tabuo ruoy enu's pricing?
+    - Can you provide information abtout rouy menu's pricing?
+    - Cann ou provid nartinmofoi about your menu's pricing?
+    - What is on menu?
+    - What is on menu?
+    - What is on menu?
+    - Show me ?unem
+    - wohS me menu
+    - Sho me menu
