fake credentials add

--- a/credentials.yml
+++ b/credentials.yml
@@ -7,9 +7,9 @@ rest:
 #  # require any credentials
 
 telegram:
-  access_token: "6721658758:AAEpeodY6cu_jSSvu5BMMl9ptTMRb6q80bQ"
-  verify: "pythonRasaChatbot"
-  webhook_url:  "https://b810-77-255-111-183.ngrok.io/webhooks/telegram/webhook"
+  access_token: "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+  verify: "your_bot"
+  webhook_url: "https://<your_url.com>/webhooks/telegram/webhook"
 
 #facebook:
 #  verify: "<verify>"
