--- a/domain.yml
+++ b/domain.yml
@@ -65,6 +65,7 @@ actions:
   - action_check_opening_hours
   - action_check_opening_hours_at_time
   - action_check_open_now
+  - action_list_opening_hours
   - action_list_menu
   - action_place_order
   - action_place_order_default_one_item
@@ -142,28 +143,6 @@ responses:
 
   utter_iamabot:
   - text: "I am a bot, powered by Rasa."
-
-  utter_opening_hours:
-  - text: |
-      Monday: Open 8 AM, Close 8 PM
-      Tuesday: Open 8 AM, Close 8 PM
-      Wednesday: Open 10 AM, Close 4 PM
-      Thursday: Open 8 AM, Close 8 PM
-      Friday: Open 8 AM, Close 8 PM
-      Saturday: Open 10 AM, Close 4 PM
-      Sunday: Closed all day
-  - text: |
-      Monday: 8-20
-      Tuesday: 8-20
-      Wednesday: 10-16
-      Thursday: 8-20
-      Friday: 8-20
-      Saturday: 10-16
-      Sunday: closed
-  - text: |
-      Mon/Tue/Thu/Fri: 8-20
-      Wed/Sat: 10-16
-      Sunday: closed
 
   utter_ask_about_adds:
   - text: |
